[package]
name = "afptas-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
colors-transform = "0.2.11"
env_logger = "0.11.5"
good_lp = "1.7.0"
log = "0.4.22"
svg = "0.18.0"
